--- a/Finance-tracker/Finance-tracker.vcxproj
+++ b/Finance-tracker/Finance-tracker.vcxproj
@@ -141,6 +141,7 @@
   <ItemGroup>
     <ClInclude Include="App.h" />
     <ClInclude Include="MainFrame.h" />
+    <ClInclude Include="Theme.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
