--- a/Finance-tracker/Finance-tracker.vcxproj.filters
+++ b/Finance-tracker/Finance-tracker.vcxproj.filters
@@ -29,5 +29,8 @@
     <ClInclude Include="MainFrame.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Theme.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
